--- a/src/index.html
+++ b/src/index.html
@@ -11,13 +11,22 @@
             <h1 class="mdc-typography--headline3">Derek Cheng</h1>
             <div class="mdc-typography--headline5">Software Developer</div>
             <div class="icons">
-                <a href="https://github.com/cheng93/" target="_blank" rel="noopener noreferrer" class="circle mdc-button">
+                <a href="https://github.com/cheng93/" target="_blank" rel="noopener noreferrer" title="Github" class="circle mdc-button">
                     <span class="fab fa-github"/>
                 </a>
-                <a href="https://www.linkedin.com/in/cheng93/" target="_blank" rel="noopener noreferrer" class="circle mdc-button">
+                <a href="https://www.linkedin.com/in/cheng93/" target="_blank" rel="noopener noreferrer" title="LinkedIn" class="circle mdc-button">
                     <span class="fab fa-linkedin-in"/>
                 </a>
             </div>
         </header>
+        <section>
+            <h2 class="mdc-typography--headline4 mdc-theme--primary">About me</h2>
+            <p class="mdc-typography--body2"
+                >Hello, my name is Derek Cheng and I am a software developer, predominantly on the back-end. I am currently based in Reading, UK.
+            </p>
+            <p class="mdc-typography--body2">
+                This website is playground for me to experiment with new technologies. As well as that, it also serves as my portfolio.
+            </p>
+        </section>
     </body>
 </html>
