--- a/src/index.html
+++ b/src/index.html
@@ -106,5 +106,18 @@
                 </div>
             </div>
         </section>
+        <footer>
+            <div>
+                <h2 class="mdc-typography--headline5 mdc-theme--on-secondary">Connect</h2>
+                <a href="https://github.com/cheng93/" target="_blank" rel="noopener noreferrer">
+                    <span class="fab fa-github"></span>
+                    <span>Github</span>
+                </a>
+                <a href="https://www.linkedin.com/in/cheng93/" target="_blank" rel="noopener noreferrer">
+                    <span class="fab fa-linkedin-in"></span>
+                    <span>LinkedIn</span>
+                </a>
+            </div>
+        </footer>
     </body>
 </html>
