--- a/src/index.html
+++ b/src/index.html
@@ -106,6 +106,33 @@
                 </div>
             </div>
         </section>
+
+        <section class="playground">
+            <h2 class="mdc-typography--headline4 mdc-theme--primary">Playground</h2>
+            <div class="mdc-card">
+                <h3 class="mdc-typography--headline5">Home</h3>
+                <p>This static page, about me and my career, served behind nginx.</p>
+                <div class="mdc-card__actions">
+                    <div class="mdc-card__action-buttons">
+                        <a class="mdc-button mdc-card__action mdc-card__action--button">Source</a>
+                    </div>
+                </div>
+            </div>
+            <div class="mdc-card">
+                <h3 class="mdc-typography--headline5">Skyrim Tool</h3>
+                <p>A potion tool for Skyrim, built with a Blazor and .NET Core.</p>
+                <div class="mdc-card__actions">
+                    <div class="mdc-card__action-buttons">
+                        <a href="/skyrim-tool" target="_blank" rel="noopener noreferrer" class="mdc-button mdc-card__action mdc-card__action--button">
+                            View
+                        </a>
+                        <a href="https://github.com/cheng93/skyrim-tool" target="_blank" rel="noopener noreferrer" class="mdc-button mdc-card__action mdc-card__action--button">
+                            Source
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
         <footer>
             <div>
                 <h2 class="mdc-typography--headline5 mdc-theme--on-secondary">Connect</h2>
