--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
                 </a>
             </div>
         </header>
-        <section>
+        <section class="aboutme">
             <h2 class="mdc-typography--headline4 mdc-theme--primary">About me</h2>
             <p class="mdc-typography--body2"
                 >Hello, my name is Derek Cheng and I am a software developer, predominantly on the back-end. I am currently based in Reading, UK.
@@ -81,6 +81,29 @@
                     <li>Docker</li>
                     <li>Ansible</li>
                 </ul>
+            </div>
+        </section>
+        <section class="experience">
+            <h2 class="mdc-typography--headline4 mdc-theme--primary">Experience</h2>
+            <div>
+                <a href="https://www.empactis.com/" target="_blank" rel="noopener noreferrer">
+                    <img src="img/empactis.jpg" />
+                </a>
+                <div class="mdc-typography--body2">
+                    <h3 class="mdc-typography--headline5">Empactis</h3>
+                    <div>Software Developer</div>
+                    <div>March 2017 - Present</div>
+                </div>
+            </div>
+            <div>
+                <a href="https://www.cloudbuy.com/index.html" target="_blank" rel="noopener noreferrer">
+                    <img src="img/cloudbuy.jpg" />
+                </a>
+                <div class="mdc-typography--body2">
+                    <h3 class="mdc-typography--headline5">cloudBuy</h3>
+                    <div>Junior Developer</div>
+                    <div>January 2015 - February 2017</div>
+                </div>
             </div>
         </section>
     </body>
