--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@
                 <p>This static page, about me and my career, served behind nginx.</p>
                 <div class="mdc-card__actions">
                     <div class="mdc-card__action-buttons">
-                        <a class="mdc-button mdc-card__action mdc-card__action--button">Source</a>
+                        <a href="https://github.com/cheng93/home" target="_blank" rel="noopener noreferrer" class="mdc-button mdc-card__action mdc-card__action--button">Source</a>
                     </div>
                 </div>
             </div>
