--- a/src/index.html
+++ b/src/index.html
@@ -28,5 +28,60 @@
                 This website is playground for me to experiment with new technologies. As well as that, it also serves as my portfolio.
             </p>
         </section>
+        <section class="skills">
+            <h2 class="mdc-typography--headline4 mdc-theme--primary">Skills</h2>
+            <div>
+                <h3 class="mdc-typography--headline5">C#</h3>
+                <ul class="mdc-typography--body2">
+                    <li>ASP.NET Core</li>
+                    <li>Entity Framework</li>
+                    <li>ASP.NET MVC</li>
+                </ul>
+            </div>
+            <div>
+                <h3 class="mdc-typography--headline5">Databases</h3>
+                <ul class="mdc-typography--body2">
+                    <li>Microsoft Sql Server</li>
+                    <li>ElasticSearch</li>
+                    <li>Azure CosmosDB</li>
+                    <li>PostgreSQL</li>
+                </ul>
+            </div>
+            <div>
+                <h3 class="mdc-typography--headline5">Javascript</h3>
+                <ul class="mdc-typography--body2">
+                    <li>Typescript</li>
+                    <li>Angular</li>
+                    <li>Kendo UI</li>
+                    <li>Webpack</li>
+                </ul>
+            </div>
+            <div>
+                <h3 class="mdc-typography--headline5">CI</h3>
+                <ul class="mdc-typography--body2">
+                    <li>VSTS</li>
+                    <li>Travis CI</li>
+                    <li>TeamCity</li>
+                    <li>Jenkins</li>
+                </ul>
+            </div>
+            <div>
+                <h3 class="mdc-typography--headline5">Unit Testing</h3>
+                <ul class="mdc-typography--body2">
+                    <li>xUnit (c#)</li>
+                    <li>Jest (JS)</li>
+                </ul>
+            </div>
+            <div class="misc">
+                <h3 class="mdc-typography--headline5">Misc</h3>
+                <ul class="mdc-typography--body2">
+                    <li>Python</li>
+                    <li>Git</li>
+                    <li>Azure</li>
+                    <li>Docker</li>
+                    <li>Ansible</li>
+                </ul>
+            </div>
+        </section>
     </body>
 </html>
