add ffviii to playground

--- a/src/index.html
+++ b/src/index.html
@@ -132,6 +132,20 @@
                     </div>
                 </div>
             </div>
+            <div class="mdc-card">
+                <h3 class="mdc-typography--headline5">FFVIII</h3>
+                <p>A junction tool for Final Fantasy VIII, built with Angular with ngrx.</p>
+                <div class="mdc-card__actions">
+                    <div class="mdc-card__action-buttons">
+                        <a href="/ffviii" target="_blank" rel="noopener noreferrer" class="mdc-button mdc-card__action mdc-card__action--button">
+                            View
+                        </a>
+                        <a href="https://github.com/cheng93/ffviii" target="_blank" rel="noopener noreferrer" class="mdc-button mdc-card__action mdc-card__action--button">
+                            Source
+                        </a>
+                    </div>
+                </div>
+            </div>
         </section>
         <footer>
             <div>
