--- a/src/index.html
+++ b/src/index.html
@@ -121,7 +121,7 @@
                 </div>
                 <div class="mdc-card">
                     <h3 class="mdc-typography--headline5">Skyrim Tool</h3>
-                    <p>A potion tool for Skyrim, built with a Blazor and .NET Core.</p>
+                    <p>A potion tool for Skyrim, built with Blazor and .NET Core.</p>
                     <div class="mdc-card__actions">
                         <div class="mdc-card__action-buttons">
                             <a href="/skyrim-tool" target="_blank" rel="noopener noreferrer" class="mdc-button mdc-card__action mdc-card__action--button">
