--- a/src/index.html
+++ b/src/index.html
@@ -124,7 +124,7 @@
                     <p>A potion tool for Skyrim, built with Blazor and .NET Core.</p>
                     <div class="mdc-card__actions">
                         <div class="mdc-card__action-buttons">
-                            <a href="/skyrim-tool" target="_blank" rel="noopener noreferrer" class="mdc-button mdc-card__action mdc-card__action--button">
+                            <a href="https://skyrim.local-dev.com" target="_blank" rel="noopener noreferrer" class="mdc-button mdc-card__action mdc-card__action--button">
                                 View
                             </a>
                             <a href="https://github.com/cheng93/skyrim-tool" target="_blank" rel="noopener noreferrer" class="mdc-button mdc-card__action mdc-card__action--button">
@@ -138,7 +138,7 @@
                     <p>A junction tool for Final Fantasy VIII, built with Angular with ngrx.</p>
                     <div class="mdc-card__actions">
                         <div class="mdc-card__action-buttons">
-                            <a href="/ffviii" target="_blank" rel="noopener noreferrer" class="mdc-button mdc-card__action mdc-card__action--button">
+                            <a href="https://ffviii.local-dev.com" target="_blank" rel="noopener noreferrer" class="mdc-button mdc-card__action mdc-card__action--button">
                                 View
                             </a>
                             <a href="https://github.com/cheng93/ffviii" target="_blank" rel="noopener noreferrer" class="mdc-button mdc-card__action mdc-card__action--button">
